# gtalk

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
gtalk/: __init__.py  cli.py
